--- a/Map Wars/res/layout/activity_main.xml
+++ b/Map Wars/res/layout/activity_main.xml
@@ -4,10 +4,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity" >
 	
-    <fragment
-          android:id="@+id/mainActivity_map"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:name="com.google.android.gms.maps.MapFragment"/>    
+    <fragment        
+        android:id="@+id/mainActivity_map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:name="com.google.android.gms.maps.MapFragment"
+          
+          />    
 
 </RelativeLayout>
