Added rotation buttons

--- a/Map Wars/res/layout/activity_main.xml
+++ b/Map Wars/res/layout/activity_main.xml
@@ -4,12 +4,33 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity" >
 	
-    <fragment        
-        android:id="@+id/mainActivity_map"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:name="com.google.android.gms.maps.MapFragment"
-          
-          />    
-
+        <fragment        
+	        android:id="@+id/mainActivity_map"
+	        android:layout_width="match_parent"
+	        android:layout_height="match_parent"
+	        android:name="com.google.android.gms.maps.MapFragment" />
+    
+	    <Button 
+	        android:id="@+id/mainActivity_rotateRight"
+	        android:text="Right"
+	        android:layout_width="80dp"
+	        android:layout_height="80dp"
+	       	android:layout_alignParentBottom="true"
+	       	android:layout_alignParentRight="true"
+	       	android:layout_marginBottom="110dp"
+	       	android:layout_marginRight="8dp"
+	        />
+	    
+	   	<Button 
+	        android:id="@+id/mainActivity_rotateLeft"
+	        android:text="Left"
+	        android:layout_width="80dp"
+	        android:layout_height="80dp"
+	       	android:layout_alignParentBottom="true"
+	       	android:layout_alignParentLeft="true"
+	       	android:layout_marginBottom="110dp"
+	       	android:layout_marginLeft="8dp"
+	        />
+        
+    
 </RelativeLayout>
