Showing and hiding targeting buttons depending on the current mode

--- a/Map Wars/res/layout/activity_main.xml
+++ b/Map Wars/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
 	       	android:layout_alignParentRight="true"
 	       	android:layout_marginBottom="110dp"
 	       	android:layout_marginRight="0dp"
+	       	android:visibility="gone"
 	        />
 	    
 	   	<Button 
@@ -30,6 +31,7 @@
 	       	android:layout_alignParentLeft="true"
 	       	android:layout_marginBottom="110dp"
 	       	android:layout_marginLeft="0dp"
+	       	android:visibility="gone"
 	        />
 	   	
    		<Button 
