--- a/Map Wars/res/values/api-keys.xml
+++ b/Map Wars/res/values/api-keys.xml
@@ -2,6 +2,6 @@
 
 <resources>
 
-    <string name="GoogleMapsKey"></string>
+    <string name="GoogleMapsKey">GOOGLE_MAPS_API_KEY_HERE</string>
     
 </resources>
